# fake_sensor_publisher

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: fake_sensor.rviz
launch/: fake_sensor_publisher.launch  fake_sensor_publisher.launch.xml
rviz/: fake_sensor.rviz
src/: fake_sensor_publisher_node.cpp
