<?xml version="1.0"?>
<package format="3">
  <name>fake_sensor_publisher</name>
  <version>0.1.0</version>
  <description>The fake_sensor_publisher package</description>
  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
